--- a/css/game.css
+++ b/css/game.css
@@ -35,7 +35,7 @@ body, html {
 }
 
 /* Estilos base, optimizados para móviles */
-#startButton {
+.game-blue-button {
     padding: 10px 20px;
     font-size: 16px; /* Tamaño de fuente legible en dispositivos móviles */
     color: #fff;
@@ -44,16 +44,19 @@ body, html {
     border-radius: 5px;
     cursor: pointer;
     outline: none;
-    position: absolute;
-    top: 50%; /* Centrar en la pantalla para móviles */
-    left: 50%;
-    transform: translate(-50%, -50%); /* Centrar precisamente el botón */
     z-index: 10;
     transition: background-color 0.3s ease; /* Transición suave para el hover */
 }
 
-#startButton:hover,
-#startButton:focus {
+.center-button {
+    position: absolute;
+    top: 50%; /* Centrar en la pantalla para móviles */
+    left: 50%;
+    transform: translate(-50%, -50%); /* Centrar precisamente el botón */
+}
+
+.game-blue-button:hover,
+.game-blue-button:focus {
     background-color: #0056b3; /* Color más oscuro para el hover/focus */
 }
 
@@ -149,5 +152,94 @@ body, html {
 }
 
 @keyframes flashAnimation {
-    50% { color: yellow; } /* o cualquier otro efecto visual deseado */
+    50% {
+        color: yellow;
+    }
+    /* o cualquier otro efecto visual deseado */
+}
+
+/* Estilos para el popup de cookies */
+.cookie-consent-popup {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    font-family: Arial, sans-serif; /* Fuente más moderna */
+}
+
+/* Estilo para el modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1001;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 70%;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    font-family: Arial, sans-serif; /* Fuente más moderna */
+}
+
+.modal-content h1 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.modal-content p {
+    color: #666;
+    line-height: 1.6;
+    font-size: 16px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Estilos adicionales para el texto legal */
+.legal-text {
+    margin-top: 20px;
+    border-top: 1px solid #ddd;
+    padding-top: 20px;
+}
+
+.legal-text h2 {
+    color: #444;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.legal-text ul {
+    list-style-type: disc;
+    margin-left: 20px;
+    color: #555;
+}
+
+.legal-text li {
+    margin-bottom: 10px;
 }
