--- a/css/game.css
+++ b/css/game.css
@@ -170,6 +170,7 @@ body, html {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     z-index: 1000;
     font-family: Arial, sans-serif; /* Fuente más moderna */
+    display: none;
 }
 
 /* Estilo para el modal */
